<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <EditText
    android:id="@+id/description"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="200dp"
    android:gravity="top|start"
    android:padding="8dp"
    android:inputType="textMultiLine|textCapSentences|textAutoComplete"
    android:singleLine="false"
    android:textAlignment="viewStart"
    android:textIsSelectable="true"
    android:text="@string/initial_text"/>
  <EditText
    android:id="@+id/type"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_weight="1"
    android:gravity="top|start"
    android:padding="8dp"
    android:inputType="textMultiLine|textCapSentences|textAutoComplete"
    android:singleLine="false"
    android:textAlignment="viewStart"
    android:textIsSelectable="true"
    android:text="@string/describe_the_type_of_the_place" />
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
     <Button
       android:id="@+id/save_button"
       android:layout_weight="1"
       android:layout_height="wrap_content"
       android:layout_width="0dp"
       android:text="@string/save" />
    <Button
      android:id="@+id/cancel_button"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:layout_width="0dp"
      android:text="@string/cancel" />
  </LinearLayout>
</LinearLayout>
